kubernetes/controlplane-fwd/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-deployment
  namespace: controlplane-fwd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          readOnly: true
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          defaultMode: 0640
          name: nginx-conf


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
  namespace: controlplane-fwd
spec:
  selector:
    app: nginx-proxy
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
